# wasm_runtime

./: Cargo.toml  scratch
src/: binary.rs  execution.rs  lib.rs  main.rs
src/binary/: instruction.rs  module.rs  opcode.rs  section.rs  types.rs
src/execution/: import.rs  runtime.rs  store.rs  value.rs  wasi.rs
src/fixtures/: hello_world.wat  memory.wat
